feat: add work section becuase now acutally i have a work xd

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -8,8 +8,8 @@ interface Props {
 }
 
 const {
-  title = "Victor Alberto - Software Developer",
-  description = "Victor Alberto - Software Developer | Portfolio showcasing innovative projects, technical expertise, and insights on software development. Explore my work and connect for collaborations.",
+  title = "Victor Alberto - Software Engineer",
+  description = "Victor Alberto - Software Engineer | Portfolio showcasing innovative projects, technical expertise, and insights on software development. Explore my work and connect for collaborations.",
   canonical,
 } = Astro.props;
 
